# notandum

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
src/app/: actions.ts  globals.css  layout.tsx  page.tsx  toyWasm.ts
src/app/components/: BackButton.tsx  Button.tsx  TaskList.tsx  Text.tsx  TextSelect.tsx  UploadFile.tsx
src/app/components/DeleteForm/: index.tsx
src/app/componnets/: Button.tsx  Input.tsx  TaskList.tsx  TextSelect.tsx  UploadFile.tsx
src/app/new/: page.tsx
src/app/task/[id]/: page.tsx
src/app/task/[task_id]/: page.tsx
src/app/task/[task_id]/labels.jsonl/: route.ts
src/app/task/[task_id]/record/[record_id]/: page.tsx
src/app/types/: index.ts
src/validations/: index.ts
toy-wasm/: Cargo.toml
toy-wasm/src/: lib.rs
