[package]
name = "toy-wasm"
version = "0.1.0"
authors = ["valeriiashmyhlo <valeriia.ibadullaieva@gmail.com>"]
description = "A toy project with wasm-pack. Simple utils to play with wasm."
license = "MIT/Apache-2.0"
repository = "https://github.com/valeriiashmyhlo/toy-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
